--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script defer src="main.bundle.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <logo>Battleships</logo>
+      </div>
+    </header>
+    <main>
+      <div class="content container">
+        <game>
+          <div class="name input container">
+            <section>
+              <label class="input">Player one:</label>
+              <input type="text" />
+            </section>
+            <section>
+              <label class="input">Player two:</label>
+              <input type="text" />
+            </section>
+          </div>
+        </game>
+      </div>
+    </main>
+    <footer><p>Copyright © 2022 gregorsunta</p></footer>
+  </body>
 </html>
