add error containers

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,12 @@
           <section class="name input one">
             <label>Player one:</label>
             <input type="text" required />
+            <p class="error hide"></p>
           </section>
           <section class="name input two">
             <label>Player two:</label>
             <input type="text" required />
+            <p class="error hide"></p>
           </section>
           <p>Gameboard size</p>
           <section class="option size">
