--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <main>
       <div class="content container">
         <form class="name input container" id="start-form">
-          <section>
+          <section class="option computer">
             <p>Playing against the computer?</p>
             <input type="checkbox" class="option computer" autocomplete="off" />
           </section>
@@ -46,8 +46,9 @@
         </form>
         <game>
           <div class="container game">
-            <div class="left container gameboard"></div>
-            <div class="right container gameboard"></div>
+            <div class="left container gameboard hide"></div>
+            <div class="right container gameboard hide"></div>
+            <div class="ship container"></div>
           </div>
         </game>
       </div>
