--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ship <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -48,7 +48,13 @@
           <div class="container game">
             <div class="left container gameboard hide"></div>
             <div class="right container gameboard hide"></div>
-            <div class="ship container"></div>
+            <div class="ships container hide">
+              <div class="ship destroyer"></div>
+              <div class="ship cruiser"></div>
+              <div class="ship submarine"></div>
+              <div class="ship battleship"></div>
+              <div class="ship carrier"></div>
+            </div>
           </div>
         </game>
       </div>
