change game container hierarchy for better control

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-ship <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -46,14 +46,25 @@ ship <!DOCTYPE html>
         </form>
         <game>
           <div class="container game">
-            <div class="left container gameboard hide"></div>
-            <div class="right container gameboard hide"></div>
-            <div class="ships container hide">
-              <div class="ship destroyer"></div>
-              <div class="ship cruiser"></div>
-              <div class="ship submarine"></div>
-              <div class="ship battleship"></div>
-              <div class="ship carrier"></div>
+            <div class="left player">
+              <div class="left container gameboard hide"></div>
+              <div class="ships container left hide">
+                <div class="ship destroyer"></div>
+                <div class="ship cruiser"></div>
+                <div class="ship submarine"></div>
+                <div class="ship battleship"></div>
+                <div class="ship carrier"></div>
+              </div>
+            </div>
+            <div class="right player">
+              <div class="right container gameboard hide"></div>
+              <div class="ships container right hide">
+                <div class="ship destroyer"></div>
+                <div class="ship cruiser"></div>
+                <div class="ship submarine"></div>
+                <div class="ship battleship"></div>
+                <div class="ship carrier"></div>
+              </div>
             </div>
           </div>
         </game>
